After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 645118 - Do not abort if an unknown user is signaled removed
Do not abort if an unknown user is signaled removed
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: User Accounts
git master
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-03-18 11:00 UTC by Frederic Peters
Modified: 2011-03-18 11:29 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Do not abort if an unknown user is signaled removed (954 bytes, patch)
2011-03-18 11:01 UTC, Frederic Peters
accepted-commit_now Details | Review

Description Frederic Peters 2011-03-18 11:00:28 UTC
It could happen that accountsservice sends a signal of an account not known to the user accounts panel being removed. The attached patch makes sure this doesn't cause a segfault.
Comment 1 Frederic Peters 2011-03-18 11:01:05 UTC
Created attachment 183704 [details] [review]
Do not abort if an unknown user is signaled removed
Comment 2 Bastien Nocera 2011-03-18 11:22:30 UTC
Review of attachment 183704 [details] [review]:

Well spotted.
Comment 3 Frederic Peters 2011-03-18 11:29:45 UTC
Pushed; thanks for the quick review.