Do not abort if an unknown user is signaled removed

https://bugzilla.gnome.org/show_bug.cgi?id=645118